vbnc/vbnc/tests/Errors/30512-27.vb
Option Explicit On
Option Strict On

Class X
    Public Shared Sub Main()
        Dim x As Single = 2
        Dim y As Integer = x
    End Sub
End Class